finished  the NaBar component

--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -4,32 +4,19 @@
 // for phone devices
 @include media("<=phone") {
   section {
-    position: relative;
+    // style the font-awsome arrow button
 
+    // style the font-awsome close button
     span {
-      position: absolute;
-      top: 2px;
-      right: 0px;
-      background: rgb(47, 49, 47);
-      padding: 7px;
-      font-size: 20px;
-      color: whitesmoke;
-      cursor: pointer;
-    }
-    article {
-      background: blueviolet;
-      position: relative;
-      display: block;
-      height: 500px;
+      display: flex;
+      justify-content: flex-end;
 
       i {
-        font-size: 32px;
-        margin: 10px;
+        font-size: 25px;
+        padding: 5px;
         color: whitesmoke;
-        position: absolute;
-        right: 5px;
-        background: rgb(58, 56, 56);
-        border-radius: 25px;
+        background: transparent;
+        border-radius: 10px;
         cursor: pointer;
       }
     }
