--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -24,7 +24,8 @@
     background: rgb(32, 31, 31);
     div {
       display: grid;
-      grid-template-columns: 2fr 5fr 1fr;
+      //justify-content: space-between;
+      grid-template-columns: 2fr 4fr 2fr;
       h1 {
         margin: 0;
         padding: 10px;
@@ -34,11 +35,15 @@
           cursor: pointer;
         }
       }
+      div {
+        display: flex;
+        justify-content: flex-end;
+      }
       span {
         color: white;
         font-size: 25px;
         display: block;
-        margin-left: auto;
+        margin-right: auto;
         padding: 10px;
         opacity: 0.5;
         transition: color 2s, opacity 2s;
@@ -53,7 +58,7 @@
     ul {
       padding: 0;
       margin: 10px;
-      margin-bottom: 15px;
+      margin-bottom: 0px;
       /*justify-content: space-evenly;*/
       list-style: none;
       display: none;
@@ -67,7 +72,7 @@
       }
     }
   }
-  .add-show {
+  .show-narBar {
     display: block;
   }
 }
