--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -14,6 +14,7 @@
       i {
         font-size: 25px;
         padding: 5px;
+        margin-right: 10px;
         color: whitesmoke;
         background: transparent;
         border-radius: 10px;
