--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -44,6 +44,7 @@
         font-size: 25px;
         display: block;
         margin-right: auto;
+        margin-left: 10px;
         padding: 10px;
         opacity: 0.5;
         transition: color 2s, opacity 2s;
