--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -27,7 +27,7 @@
       //justify-content: space-between;
       grid-template-columns: 2fr 4fr 2fr;
       h1 {
-        margin: 0;
+        margin: 0 auto;
         padding: 10px;
         display: block;
         color: aliceblue;
