--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -1,3 +1,19 @@
 // Import the css breakpoint functions
 @import "../../breakpoints.scss";
 @import "../../App.scss";
+.btn-primary {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--mainBlack);
+  background: var(--primaryColor);
+  padding: 0.4rem 0.9rem;
+  border: 3px solid var(--primaryColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.btn-primary:hover {
+  background: transparent;
+  color: var(--primaryColor);
+}
