rooms components updated

--- a/src/Components/FeaturedRoom/featuredRoom.scss
+++ b/src/Components/FeaturedRoom/featuredRoom.scss
@@ -30,11 +30,11 @@
 }
 /* end pf featured rooms */
 /* room */
-.room {
+.featured-room {
   box-shadow: var(--lightShadow);
   transition: var(--mainTransition);
 }
-.room:hover {
+.featured-room:hover {
   box-shadow: var(--darkShadow);
 }
 
