--- a/src/Components/Rooms/Rooms.scss
+++ b/src/Components/Rooms/Rooms.scss
@@ -3,10 +3,10 @@
 @import "../../App.scss";
 
 /* featured rooms */
-.featured-rooms {
+.rooms {
   padding: 5rem 0;
 
-  .featured-rooms-center {
+  .rooms-center {
     width: 80vw;
     margin: 0 auto;
     display: grid;
@@ -17,13 +17,13 @@
 }
 
 @media screen and (min-width: 776px) {
-  .featured-rooms-center {
+  .rooms-center {
     width: 90vw;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
   }
 }
 @media screen and (min-width: 992px) {
-  .featured-rooms-center {
+  .rooms-center {
     width: 95vw;
     max-width: 1170px;
   }
