--- a/src/Components/DetailedRoom/DetailedRoom.scss
+++ b/src/Components/DetailedRoom/DetailedRoom.scss
@@ -74,4 +74,21 @@
     padding-left: 3rem;
   }
 }
+
+.btn-primary {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--mainBlack);
+  background: var(--primaryColor);
+  padding: 0.4rem 0.9rem;
+  border: 3px solid var(--primaryColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.btn-primary:hover {
+  background: transparent;
+  color: var(--primaryColor);
+}
 /* end of single room*/
