--- a/src/Components/Banner/Banner.scss
+++ b/src/Components/Banner/Banner.scss
@@ -6,6 +6,8 @@
 
 .banner {
   display: inline-block;
+  width: 80%;
+  margin: 0 auto;
   background: rgba(0, 0, 0, 0.5);
   color: var(--mainWhite);
   padding: 2rem 1rem;
@@ -13,6 +15,7 @@
   text-transform: capitalize;
   letter-spacing: var(--mainSpacing);
   h1 {
+    margin: 0 auto;
     font-size: 2.5rem;
   }
   div {
